actualización con vite

--- a/curso-js/React/1. Introducción a React.md
+++ b/curso-js/React/1. Introducción a React.md
@@ -8,30 +8,25 @@
 
 ***npx*** ejecuta el paquete npm sin instalarlo.
 
+- Una opción es inicializar el proyecto mediante la aplicación propia de facebook, *create-react-app*:
 ```js
 npx create-react-app my-app  
 cd my-app  
 npm start
 ```
+- Como da errores, ver [issue en Github](https://github.com/facebook/create-react-app/issues/17006)podemos hacer un rollback a la versión 18 o utilizar vite (que usa la versión 18):
 
-Dependencias instaladas en el fichero *package.json*:
+```bash
+npm create vite@latest
+# ahora seguir menú y generar una app en React
+```
 
-```js
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  ```
 
 ## Ejecución en desarrollo
 
 Mira  los scripts que hay definidos en el fichero ***package.json***. 
-Para ejecutar nuestro proyecto,  se ejecuta ***npm run start*** o ***npm start*** que nos lanza un live server en localhots:3000
+Para ejecutar nuestro proyecto,  se ejecuta ***npm run start*** o ***npm start*** que nos lanza un live server en localhost:3000 si hemos usado *create-react-app*.
+En caso de usar vite, el comando es ***npm run dev***.
 Prueba a cambiar código por ejemplo en el fichero ***App.js*** verás como se actualiza directamente el navegador.
 
 ## Ejecución en producción
@@ -39,7 +34,7 @@ Se compila mediante el comando ***npm run build***. Crea una carpeta *build* que
 
 ## Código en React
 Nuestro código React se coloca en el fichero *App.js* y el css en el fichero *App.css*.
-Observa en **App.js** que se cambian los atributos ***class*** por ***className*** en los elementos html.  El código que tenemos es JavaScript y class es una palabra reservada del lenguaje.
+Observa enpos elementos html.  El código que tenemos es JavaScript y class es una palabra reservada del lenguaje.
 
 ```js
 import './App.css';
@@ -141,4 +136,5 @@ https://www.npmjs.com/package/react-floating-whatsapp
 - Cada componente en en su función, retorna un solo elemento html. Si tiene que retornar varios, hay que envolverlos en un elemento padre.
 - El css se importa pero no se guarda en ninguna variable, lo hace de forma mágica el **package bundler** que se utilice.
 - Importar elementos de terceros suele ser bastante sencillo al aislar el código en componentes.
+
 
