mejorado gh-pages

--- a/curso-js/React/1. Introducción a React.md
+++ b/curso-js/React/1. Introducción a React.md
@@ -1,8 +1,8 @@
 ## Objetivos
-- [ ] Entender el comando npx #react
-- [ ] Entender componentes y estructura proyecto en React  #react
-- [ ] Saber usar useState  #react
-- [ ] Saber buscar e instalar paquetes de terceros #react
+- [x] Entender el comando npx #react ✅ 2025-01-30
+- [x] Entender componentes y estructura proyecto en React #react ✅ 2025-01-30
+- [x] Saber usar useState #react ✅ 2025-01-30
+- [x] Saber buscar e instalar paquetes de terceros #react ✅ 2025-01-30
 
 ## Creación de un nuevo proyecto
 
@@ -18,6 +18,7 @@ npm start
 
 ```bash
 npm create vite@latest
+# equivalente a npx create-vite@latest
 # ahora seguir menú y generar una app en React
 ```
 
