--- a/curso-js/JavaScript/5. Arrays y objetos.md
+++ b/curso-js/JavaScript/5. Arrays y objetos.md
@@ -32,7 +32,7 @@ Incluso se pueden cambiar los valores de las variables:
 ```js
 const pedido = ['judias verdes', 'ensalada'];
 let [primerPlato, segundoPlato] = pedido;
-[primerPlato, segundoPlato] = [segundoPlato, primerPlato];
+;[primerPlato, segundoPlato] = [segundoPlato, primerPlato];
 ```
 Hacer  lo anterior de "forma tradicional" requeriría el uso de una variable temporal.
 
