--- a/curso-js/JavaScript/8. Async resumido y práctico.md
+++ b/curso-js/JavaScript/8. Async resumido y práctico.md
@@ -1,88 +1,145 @@
 
-// llamada AJAX al servidor
+- Las llamadas de datos a un servidor se realizan por defecto con *fetch*.
+- Las podemos realizar mediante promesas o mediante async-await.
+- Promesas:
 
-fetch('https://jsonplaceholder.typicode.com/users')
-.then(response => {
-    return response.json();
-})
-.then(data => {
-    console.log(data);
-})
-.catch(error => {})
-.finally(() => {});
+```js
+function peticionConPromesas() {
+  // vamos a obtener los usuarios de la API
+  fetch('https://jsonplaceholder.typicode.com/users')
+    // .then((response) => console.log(response))
+    .then((response) => response.json())
+    .then((users) => mostrarUsuarios(users))
+    .catch((error) => console.log(error))
+    .finally(() => console.log('Proceso finalizado'))
+}
+```
+
+- Async/await:
+```js
+async function peticionAsyncAwait() {
+  try {
+    const response = await fetch('https://jsonplaceholder.typicode.com/users')
+    const users = await response.json()
+    mostrarUsuarios(users)
+  } catch (error) {
+    console.log(error)
+  } finally {
+    console.log('Proceso finalizado')
+  }
+}
+```
 
 
-// llamada AJAX al servidor
+- Si usamos *fetch*, en la respuesta, debemos ejecutar la función json() que nos devuelve los datos.
+- Si los datos no existen, pero el recurso no se encuentra, normalmente devuelve un 404 que no es error y debemos procesarlo a mano:
+	- *response.ok* será false
+	- *response.status* será 404
 
-// fetch('http://localhost:4000/dishes').then((response) => console.log(response))
-// response tiene una función json() que devuelve una promesa y si
-// quiero capturar la promesa debo hacer un then()
-// para enviar la promesa debo hacer un return
+```js
+if (!response.ok)
+        throw new Error(`resource not found (${response.status})`);
+```
 
+
+- En ocasiones podemos tener que recibir varias llamadas para componer nuestra respuesta. Para este ejemplo utilizaremos como servidor [un repositorio de GitHub](https://github.com/juanda99/restaurante-backend)
+
+```js
 const SERVER_URL = 'http://localhost:4000'
 const CATEGORIES_URL = `${SERVER_URL}/categories`
 const DISHES_URL = `${SERVER_URL}/dishes`
 const RESTAURANTS_URL = `${SERVER_URL}/restaurants`
 
-let dishes, categories, restaurants
+const btn = document.querySelector('#btn')
+// btn.addEventListener('click', peticionConPromesas)
+btn.addEventListener('click', peticionAsyncAwait)
 
-fetch(DISHES_URL)
-  .then((response) => {
-    return response.json() // no olvidar el return si hay llaves en la función
+async function peticionAsyncAwait() {
+  try {
+    // esto se debería hacer asincrono:
+    const response1 = await fetch(CATEGORIES_URL)
+    const categories = await response1.json()
+    const response2 = await fetch(DISHES_URL)
+    const dishes = await response2.json()
+    const response3 = await fetch(RESTAURANTS_URL)
+    const restaurants = await response3.json()
+    // y aquí se debería hacer sincrono:
+    mostrarPlatos(categories, dishes, restaurants)
+  } catch (error) {
+    console.log(error)
+  }
+}
+
+// chatGPT:
+function peticionConPromesas() {
+  fetch(CATEGORIES_URL)
+    .then((response1) => response1.json())
+    .then((categories) => {
+      return fetch(DISHES_URL).then((response2) =>
+        response2.json().then((dishes) => ({ categories, dishes }))
+      )
+    })
+    .then(({ categories, dishes }) => {
+      return fetch(RESTAURANTS_URL).then((response3) =>
+        response3.json().then((restaurants) => ({
+          categories,
+          dishes,
+          restaurants,
+        }))
+      )
+    })
+    .then(({ categories, dishes, restaurants }) => {
+      mostrarPlatos(categories, dishes, restaurants)
+    })
+    .catch((error) => console.log(error))
+}
+
+function mostrarPlatos(categories, dishes, restaurants) {
+  dishes.forEach((dish) => {
+    dish.categoria = categories.find(
+      ({ categoriaID: id }) => id === dish.categoriaID
+    ).categoria
+    dish.restaurante = restaurants.find(
+      ({ restauranteID: id }) => id === dish.restauranteID
+    ).restaurante
   })
-  .then((data) => console.log(data))
-
-fetch(CATEGORIES_URL)
-  .then((response) => {
-    return response.json() // no olvidar el return si hay llaves en la función
+  const contenedor = document.querySelector('#datos')
+  let html = ''
+  dishes.forEach(({ plato, descripcion, precio, categoria, restaurante }) => {
+    html += `
+      <h3>${plato}</h3>
+      <p>Descripción: ${descripcion || '-'}</p>
+      <p>Precio: ${precio} <br/> Categoria: ${categoria} <br/> Restaurante: ${restaurante}</p>
+    `
   })
-  .then((data) => console.log(data))
+  contenedor.innerHTML = html
+}
+```
 
-fetch(RESTAURANTS_URL)
-  .then((response) => {
-    return response.json() // no olvidar el return si hay llaves en la función
-  })
-  .then((data) => console.log(data))
+- Es mejor ejecutarlas en paralelo usando *Promise.all*
+```js
+async function peticionAsyncAwait() {
+  try {
+    // Ejecutar todas las peticiones en paralelo
+    const [response1, response2, response3] = await Promise.all([
+      fetch(CATEGORIES_URL),
+      fetch(DISHES_URL),
+      fetch(RESTAURANTS_URL)
+    ]);
 
+    // Convertir las respuestas a JSON en paralelo
+    const [categories, dishes, restaurants] = await Promise.all([
+      response1.json(),
+      response2.json(),
+      response3.json()
+    ]);
 
+    // Llamar a la función de visualización
+    mostrarPlatos(categories, dishes, restaurants);
+  } catch (error) {
+    console.log(error);
+  }
+}
+```
 
-
-
-// llamada AJAX al servidor
-
-// fetch('http://localhost:4000/dishes').then((response) => console.log(response))
-// response tiene una función json() que devuelve una promesa y si
-// quiero capturar la promesa debo hacer un then()
-// para enviar la promesa debo hacer un return
-
-const SERVER_URL = 'http://localhost:4000'
-const CATEGORIES_URL = `${SERVER_URL}/categories`
-const DISHES_URL = `${SERVER_URL}/dishes`
-const RESTAURANTS_URL = `${SERVER_URL}/restaurants`
-
-let dishes, categories, restaurants
-
-fetch(DISHES_URL)
-  .then((response) => {
-    return response.json() // no olvidar el return si hay llaves en la función
-  })
-  .then((data) => {
-    dishes = data
-    fetch(CATEGORIES_URL)
-      .then((response) => {
-        return response.json() // no olvidar el return si hay llaves en la función
-      })
-      .then((data) => {
-        categories = data
-
-        fetch(RESTAURANTS_URL)
-          .then((response) => {
-            return response.json() // no olvidar el return si hay llaves en la función
-          })
-          .then((data) => {
-            restaurants = data
-            // ya he recibido todo, voy a "juntar los datos"
-            console.log(dishes, categories, restaurants)
-          })
-      })
-  })
+- Es habitual usar librerías como [axios](https://www.npmjs.com/package/axios) en vez de *fetch*, aunque no sean nativas.
