--- a/curso-js/JavaScript/8. Async resumido y práctico.md
+++ b/curso-js/JavaScript/8. Async resumido y práctico.md
@@ -20,6 +20,10 @@ function peticionConPromesas() {
 async function peticionAsyncAwait() {
   try {
     const response = await fetch('https://jsonplaceholder.typicode.com/users')
+    
+    if (!response.ok)
+        throw new Error(`resource not found (${response.status})`);
+        
     const users = await response.json()
     mostrarUsuarios(users)
   } catch (error) {
