add advanced proyect1

--- a/curso-js/JavaScript/3. Fundamentos de JavaScript.md
+++ b/curso-js/JavaScript/3. Fundamentos de JavaScript.md
@@ -1,6 +1,6 @@
 ## Objetivos
 
-- [x] Ejecutar un fichero js en navegador, quoakka.js y terminal #fundamentosjs ✅ 2025-01-14
+- [ ] Ejecutar un fichero js en navegador, quoakka.js y terminal #fundamentosjs ✅ 2025-01-14
 - [ ] Aprender a  debuggear #fundamentosjs
 
 ## Donde se ejecuta JavaScript
