--- a/curso-js/React/1. Introducción a React.md
+++ b/curso-js/React/1. Introducción a React.md
@@ -1,23 +1,26 @@
 ## Objetivos
-- [x] Entender el comando npx #react ✅ 2025-01-30
-- [x] Entender componentes y estructura proyecto en React #react ✅ 2025-01-30
-- [x] Saber usar useState #react ✅ 2025-01-30
-- [x] Saber buscar e instalar paquetes de terceros #react ✅ 2025-01-30
+- [ ] Entender el comando npx #react ✅ 2026-01-30
+- [ ] Entender componentes y estructura proyecto en React #react ✅ 2026-01-30
+- [ ] Saber usar useState #react ✅ 2026-01-30
+- [ ] Saber buscar e instalar paquetes de terceros #react ✅ 2026-01-30
 
 ## Creación de un nuevo proyecto
 
 ***npx*** ejecuta el paquete npm sin instalarlo.
 
-- Una opción es inicializar el proyecto mediante la aplicación propia de facebook, *create-react-app*:
+- La opción habitual era inicializar el proyecto mediante la aplicación propia de facebook, *create-react-app*:
 ```js
 npx create-react-app my-app  
 cd my-app  
 npm start
 ```
-- Como da errores, ver [issue en Github](https://github.com/facebook/create-react-app/issues/17006)podemos hacer un rollback a la versión 18 o utilizar vite (que usa la versión 18):
+
+- Pero está deprecated, ver https://react.dev/blog/2025/02/14/sunsetting-create-react-app
+- Propone varias opciones, pero utilizaremos vite:
 
 ```bash
 npm create vite@latest
+// equivalente a npx create-vite, que es el paquete que npm busca 
 # equivalente a npx create-vite@latest
 # ahora seguir menú y generar una app en React
 ```
@@ -26,8 +29,7 @@ npm create vite@latest
 ## Ejecución en desarrollo
 
 Mira  los scripts que hay definidos en el fichero ***package.json***. 
-Para ejecutar nuestro proyecto,  se ejecuta ***npm run start*** o ***npm start*** que nos lanza un live server en localhost:3000 si hemos usado *create-react-app*.
-En caso de usar vite, el comando es ***npm run dev***.
+Para ejecutar nuestro proyecto,  se usa comando es ***npm run dev***.
 Prueba a cambiar código por ejemplo en el fichero ***App.js*** verás como se actualiza directamente el navegador.
 
 ## Ejecución en producción
