--- a/curso-js/JavaScript/6. Arrays.md
+++ b/curso-js/JavaScript/6. Arrays.md
@@ -1,6 +1,6 @@
 ## Métodos en  los arrays
 Array es un objeto que tiene métodos. Cuando nosotros creamos un objeto de este tipo heredemos sus métodos.
-Estos métodos pueden dividirse en 2 grupos: inmutables y mutables, en función de si alteran o no el propio objeto que los invoca.
+Estos métodos pueden dividirse en 2 grupos: inmutables y mutables, en función de si alteran o no el propio objeto que los invoca.alu
 
 Una buena  fuente  de documentación  es la [documentación de Mozilla](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array)
 
