--- a/curso-js/JavaScript/8. Async resumido y práctico.md
+++ b/curso-js/JavaScript/8. Async resumido y práctico.md
@@ -2,6 +2,7 @@
 - Las llamadas de datos a un servidor se realizan por defecto con *fetch*.
 - Las podemos realizar mediante promesas o mediante async-await.
 - Promesas:
+![[promises.png.png]]
 
 ```js
 function peticionConPromesas() {
