--- a/curso-js/React/1. Introducción a React.md
+++ b/curso-js/React/1. Introducción a React.md
@@ -1,4 +1,4 @@
-## Objetivos
++]]]## Objetivos
 - [ ] Entender el comando npx #react ✅ 2026-01-30
 - [ ] Entender componentes y estructura proyecto en React #react ✅ 2026-01-30
 - [ ] Saber usar useState #react ✅ 2026-01-30
